# strutcpp

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  flake.nix  strut-config.cmake.in  strutcpp-config.cmake.in  strutcpp.nix
include/strut/: case.hpp  file.hpp  from_string.hpp  join.hpp  layout.hpp  numeric_less.hpp  split.hpp  string_util.hpp  strut.hpp  to_string.hpp  tokenize.hpp  trim.hpp  utf8.hpp
src/: file.cpp  layout.cpp  split.cpp  utf8.cpp
test/: case_test.cpp  file_test.cpp  from_string_test.cpp  join_test.cpp  layout_test.cpp  numeric_less_test.cpp  split_test.cpp  to_string_test.cpp  tokenize_test.cpp  trim_test.cpp  utf8_test.cpp
test/data/: test.txt  test_nonl.txt
